fix(): 修改过时代码
将原来的clazz.newInstance()更换为clazz.getDeclaredConstructor().newInstance()